--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
+
 .status-cell {
     padding: 5px 5px;
-    border-radius: 10px;
-    display: inline-block;
-    min-width: 75px;
     height: 40px;
     text-align: center;
     color: white;
@@ -17,16 +15,29 @@
 }
 
 .action-button {
-    margin-right: 5px; 
+    margin-right: 5px;
 }
 
 table {
-    border-radius: 20px; 
     overflow: hidden;
 }
 
 th,
 td {
-    padding: 10px; 
-    border: 1px solid #ccc; 
+    padding: 10px;
+    border: 1px solid #ccc;
 }
+
+.custom-tooltip .tooltip-inner {
+    background-color: #fff; 
+    color: #000; 
+    border-radius: 8px; 
+    padding: 8px; 
+    font-size: 14px; 
+}
+
+.custom-tooltip {
+    --bs-tooltip-bg: violet; 
+    --bs-tooltip-color: #ffffff; 
+  }
+  
